# car-insurance-premium-simulator

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  settings.json
migrations/: env.py
migrations/versions/: 20230901_120000_initial_schema.py
scripts/: startup.sh  wait-for-postgres.sh
src/application/dtos/: car_dto.py  premium_dto.py
src/application/services/: premium_service.py
src/config/: settings.py
src/domain/entities/: car.py
src/domain/events/: premium_calculated.py
src/domain/services/: premium_calculator.py
src/domain/value_objects/: address.py  premium.py
src/infrastructure/auth/: auth.py
src/infrastructure/database/: config.py  models.py  repository.py
src/infrastructure/gis/: gis_service.py
src/presentation/: main.py
src/presentation/api/routes/: premium_routes.py
tests/: conftest.py
tests/unit/application/: test_premium_service.py
tests/unit/domain/: test_premium_calculator.py
