[tool.poetry]
name = "car-insurance-simulator"
version = "0.1.0"
description = "A FastAPI service for calculating car insurance premiums"
authors = ["Matheus Ferreira Fernandes <matheusbfrfg@hotmail.com>"]
readme = "README.md"
packages = [{include = "car_insurance_premium_simulator"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
pydantic = "^2.3.0"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true